# melodic-track-mixing-lib

./: .gitmodules  Cargo.toml  README.md  build.rs  loggit.ini  wrapper.h
crates/pipeline/: Cargo.toml
crates/pipeline/src/: audio.rs  cache.rs  lib.rs  main.rs  pipeline.rs
crates/sortlib/: Cargo.toml
crates/sortlib/src/: algorithm.rs  lib.rs
crates/sortlib/src/tests/: mod.rs
crates/sortlib/src/types/: mod.rs  track.rs
src/: algorithm.rs  errors.rs  lib.rs  main.rs  pipeline.rs
src/audio_analyze/: mod.rs
src/key_detect/: mod.rs
src/tests/: mod.rs
src/types/: key.rs  track.rs
